--- a/index.html
+++ b/index.html
@@ -104,7 +104,39 @@
                     </div>
                 </div>
 
-                <div class="form-section">
+                <!-- Wing Configuration -->
+                <div class="form-section" id="wing-configuration-section">
+                    <h3>🦅 Configuração das Asas</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                        <div class="form-group">
+                            <label for="wing_type">Tipo de Asa:</label>
+                            <select id="wing_type" onchange="updateCalculations()">
+                                <option value="monoplane_cantilever">Monoplano Cantilever</option>
+                                <option value="biplane">Biplano</option>
+                                <option value="delta_wing">Asa Delta (Experimental)</option>
+                            </select>
+                            <p id="wing_type_note" class="text-sm text-gray-600 mt-1"></p>
+                        </div>
+                         <div class="form-group">
+                            <label for="landing_gear_type">Trem de Pouso:</label>
+                            <select id="landing_gear_type" onchange="updateCalculations()">
+                                <option value="fixed_gear">Fixo</option>
+                                <option value="retractable_gear">Retrátil</option>
+                                <option value="skis">Esquis</option>
+                                <option value="floats">Flutuadores</option>
+                            </select>
+                            <p id="landing_gear_type_note" class="text-sm text-gray-600 mt-1"></p>
+                        </div>
+                    </div>
+                    <div class="space-y-2 mt-4">
+                        <div class="item-row"><input type="checkbox" id="flaps" onchange="updateCalculations()"><label for="flaps">Flaps</label></div>
+                        <div class="item-row"><input type="checkbox" id="slats" onchange="updateCalculations()"><label for="slats">Slats</label></div>
+                        <div class="item-row"><input type="checkbox" id="folding_wings" onchange="updateCalculations()"><label for="folding_wings">Asas Dobráveis (Naval)</label></div>
+                        <div class="item-row"><input type="checkbox" id="swept_wings" onchange="updateCalculations()"><label for="swept_wings">Asas Enflechadas (Experimental)</label></div>
+                    </div>
+                </div>
+
+                <div class="form-section" id="engine-section">
                     <h3>⚙️ Motor e Propulsão</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                         <div class="form-group">
@@ -166,10 +198,14 @@
                             <p id="supercharger_note" class="text-sm text-gray-600 mt-1"></p>
                         </div>
                     </div>
+                    <div class="space-y-2 mt-4">
+                        <div class="item-row"><input type="checkbox" id="ducted_radiators" onchange="updateCalculations()"><label for="ducted_radiators">Radiadores Dutados</label></div>
+                        <div class="item-row"><input type="checkbox" id="intercoolers" onchange="updateCalculations()"><label for="intercoolers">Intercoolers</label></div>
+                    </div>
                 </div>
                 
                 <div class="form-section" id="armament-section">
-                    <h3>🔫 Armamentos</h3>
+                    <h3>🔫 Armamentos Ofensivos</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-4">
                         <div class="item-row">
                             <label for="mg_30">Metralhadora .30 (7.62mm)</label>
@@ -230,6 +266,35 @@
                     </div>
                 </div>
 
+                <!-- Defensive Armaments -->
+                <div class="form-section" id="defensive-armaments-section">
+                    <h3>🛡️ Armamentos Defensivos</h3>
+                    <div class="form-group">
+                        <label for="defensive_turret_type">Tipo de Torre Defensiva:</label>
+                        <select id="defensive_turret_type" onchange="updateCalculations()">
+                            <option value="none_turret">Nenhum</option>
+                            <option value="manned_turret">Torreta Tripulada (Manual)</option>
+                            <option value="powered_turret">Torreta Motorizada (Hidráulica/Elétrica)</option>
+                            <option value="remote_turret">Torreta Remota</option>
+                        </select>
+                        <p id="defensive_turret_type_note" class="text-sm text-gray-600 mt-1"></p>
+                    </div>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-4 mt-4">
+                        <div class="item-row">
+                            <label for="defensive_mg_30">Metralhadora .30 (Defensiva)</label>
+                            <input type="number" id="defensive_mg_30" min="0" max="4" value="0" oninput="updateCalculations()">
+                        </div>
+                        <div class="item-row">
+                            <label for="defensive_mg_50">Metralhadora .50 (Defensiva)</label>
+                            <input type="number" id="defensive_mg_50" min="0" max="4" value="0" oninput="updateCalculations()">
+                        </div>
+                        <div class="item-row">
+                            <label for="defensive_cannon_20">Canhão 20mm (Defensivo)</label>
+                            <input type="number" id="defensive_cannon_20" min="0" max="2" value="0" oninput="updateCalculations()">
+                        </div>
+                    </div>
+                </div>
+
                 <div class="form-section" id="protection-section">
                     <h3>🛡️ Proteção</h3>
                     <div class="space-y-2">
@@ -240,8 +305,30 @@
                     </div>
                 </div>
 
+                <div class="form-section" id="cockpit-comfort-section">
+                    <h3>🛋️ Cockpit e Conforto</h3>
+                    <div class="space-y-2">
+                        <div class="item-row"><input type="checkbox" id="enclosed_cockpit" onchange="updateCalculations()"><label for="enclosed_cockpit">Cabine Fechada</label></div>
+                        <div class="item-row"><input type="checkbox" id="heated_cockpit" onchange="updateCalculations()"><label for="heated_cockpit">Cabine Aquecida</label></div>
+                        <div class="item-row"><input type="checkbox" id="oxygen_system" onchange="updateCalculations()"><label for="oxygen_system">Sistema de Oxigênio</label></div>
+                        <div class="item-row"><input type="checkbox" id="basic_autopilot" onchange="updateCalculations()"><label for="basic_autopilot">Piloto Automático Básico</label></div>
+                    </div>
+                </div>
+
+                <div class="form-section" id="advanced-avionics-section">
+                    <h3>📡 Sistemas Avançados e Aviônicos</h3>
+                    <div class="space-y-2">
+                        <div class="item-row"><input type="checkbox" id="radio_direction_finder" onchange="updateCalculations()"><label for="radio_direction_finder">Rádio Direção (RDF)</label></div>
+                        <div class="item-row"><input type="checkbox" id="blind_flying_instruments" onchange="updateCalculations()"><label for="blind_flying_instruments">Instrumentos de Voo por Instrumentos</label></div>
+                        <div class="item-row"><input type="checkbox" id="basic_bomb_sight" onchange="updateCalculations()"><label for="basic_bomb_sight">Mira de Bombardeio (Básica)</label></div>
+                        <div class="item-row"><input type="checkbox" id="advanced_bomb_sight" onchange="updateCalculations()"><label for="advanced_bomb_sight">Mira de Bombardeio (Avançada)</label></div>
+                        <div class="item-row"><input type="checkbox" id="camera_equipment" onchange="updateCalculations()"><label for="camera_equipment">Equipamento de Câmera (Recon)</label></div>
+                        <div class="item-row"><input type="checkbox" id="early_radar" onchange="updateCalculations()"><label for="early_radar">Radar Inicial (Experimental)</label></div>
+                    </div>
+                </div>
+
                 <div class="form-section" id="equipment-section">
-                    <h3>📡 Equipamentos</h3>
+                    <h3>⚙️ Equipamentos</h3>
                     <div class="space-y-2">
                         <div class="item-row"><input type="checkbox" id="parachute" onchange="updateCalculations()"><label for="parachute">Paraquedas</label></div>
                         <div class="item-row"><input type="checkbox" id="ejection_seat" onchange="updateCalculations()"><label for="ejection_seat">Assento Ejetável (Exp.)</label></div>
@@ -250,7 +337,6 @@
                         <div class="item-row"><input type="checkbox" id="nav_instruments" onchange="updateCalculations()"><label for="nav_instruments">Instrumentos de Navegação</label></div>
                         <div class="item-row"><input type="checkbox" id="gyro_compass" onchange="updateCalculations()"><label for="gyro_compass">Bússola Giroscópica</label></div>
                         <div class="item-row"><input type="checkbox" id="gun_synchronizer" onchange="updateCalculations()"><label for="gun_synchronizer">Sincronizador de Metralhadoras</label></div>
-                        <div class="item-row"><input type="checkbox" id="retractable_gear" onchange="updateCalculations()"><label for="retractable_gear">Trem de Pouso Retrátil</label></div>
                         <div class="item-row"><input type="checkbox" id="pressurized_cabin" onchange="updateCalculations()"><label for="pressurized_cabin">Cabine Pressurizada</label></div>
                         <div class="item-row"><input type="checkbox" id="dive_brakes" onchange="updateCalculations()"><label for="dive_brakes">Freios de Mergulho</label></div>
                         <div class="item-row"><input type="checkbox" id="sirens" onchange="updateCalculations()"><label for="sirens">Sirenes Psicológicas</label></div>
@@ -258,6 +344,15 @@
                         <div class="item-row"><input type="checkbox" id="extra_fuel_tanks" onchange="updateCalculations()"><label for="extra_fuel_tanks">Tanques de Combustíveis Extras (Fixos)</label></div>
                         <div class="item-row"><input type="checkbox" id="drop_tanks" onchange="updateCalculations()"><label for="drop_tanks">Tanques de Combustíveis Descartáveis</label></div>
                         <div class="item-row"><input type="checkbox" id="advanced_control_surfaces" onchange="updateCalculations()"><label for="advanced_control_surfaces">Superfícies de Controle Avançadas</label></div>
+                        <div class="item-row"><input type="checkbox" id="arresting_hook" onchange="updateCalculations()"><label for="arresting_hook">Gancho de Arresto</label></div>
+                        <div class="item-row"><input type="checkbox" id="smoke_generators" onchange="updateCalculations()"><label for="smoke_generators">Geradores de Fumaça</label></div>
+                    </div>
+                </div>
+
+                <div class="form-section" id="reliability-maintainability-section">
+                    <h3>🔧 Confiabilidade e Manutenibilidade</h3>
+                    <div class="space-y-2">
+                        <div class="item-row"><input type="checkbox" id="standardized_parts" onchange="updateCalculations()"><label for="standardized_parts">Peças Padronizadas</label></div>
                     </div>
                 </div>
 
