--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 
             </div>
 
-            <div class="summary-panel">
+            <div class="summary-panel" id="summary_panel_clickable">
                 <div class="summary-header">
                     <h3><i class="fa-solid fa-chart-line mr-2"></i>Resumo da Aeronave</h3>
                     <i id="generate-sheet-icon" class="fa-solid fa-file-invoice generate-icon" title="Clique para gerar a ficha detalhada da aeronave"></i>
